--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,56 @@
 :root
 {
-  --yellow:#f5c32c;
-  --orange:#fca61f;
-  --black:#242d49;
-  --gray:#788097;
-  --blueCard:#ddf8fe;
-  --purple:rgba(238 210 255);
-  --boxShadow:0px 19px 60px rgba(0 0 0 / 8%);
-  --orangeCard:rgba(252, 166, 31, 0.45);
-  --smboxShadow:-79px 51px 60px rgba(0, 0, 0, 0.08);
+  --yellow: #F5C32C;
+    --orange : #FCA61F;
+    --black : #242D49;
+    --gray : #788097;
+    --blueCard : #DDF8FE;
+    --purple: rgb(238 210 255);
+    --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
+    --orangeCard: rgba(252, 166, 31, 0.45);
+    --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
-*,*::after,*::before{
+
+*,
+*::after,
+*::before{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Gumela;
+  /* outline: 1px solid red; */
 }
-.App {
-  padding: 0.5rem 3.5rem;
-  overflow: hidden;
-  color: var(--black);
-  min-height: 100vh;
-}
-
-.button{
-font-size: 1rem;
-padding: 1rem 3rem;
-color: white;
-border: none;
-border-radius: 50px;  
-background-color: #fdc50f;
-box-shadow: 0px 28px 37px -7px var(--orange);
-border: 1px solid transparent;
-}
-
-.button:hover{
+body{
   background-color: white;
-  color: #fdc50f;
-  cursor: pointer;
-  border: 1px solid var(--orange);
+}
+.App{
+    padding: 0.5rem 3.5rem;
+    overflow: hidden;
+    color: var(--black);    
+    font-family: Gumela;
+    max-width: 1500px;
+    margin-inline: auto;
 }
 
-@media screen and (max-width:480px){
-  .App{
+.button {
+    background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
+    box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+    border-radius: 34px;
+    border: none;
+    color: white;
+    font-size: 16px;
+    padding: 11px 26px 11px 26px;
+  }
+  
+  .button:hover {
+    background: white;
+    cursor: pointer;
+    border: 1px solid var(--orange);
+    color: var(--orange);
+  }
+ 
+
+@media (min-width:375px) and (max-width:680px) {
+  .App {
     padding: 0.5rem 1rem;
   }
 
