--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -38,8 +38,14 @@ gap: 1rem;
     transform: scale(0.7);
 }
 
-@media screen and (max-width:480px){
+@media (min-width:375px) and (max-width:680px) {
     .card{
-        width: auto;
+        width: 100%;
+        height: 20rem;
+        box-shadow: var(--boxShadow);
+        border-radius: 20px;
+        padding: 2rem;
+        gap: 1rem;
+        }
     }
-}
+
