--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,90 +1,59 @@
 .contact-form{
+    padding: 0 3rem 0 3rem;
     display: flex;
-    min-height: 70vh;
-    gap: 12rem;
+    height: 80vh;
+    margin-top: 4rem;
+      /* scroll */
+  padding-top: 3rem;
+}
+
+.c-right{
+    display: flex;
+    justify-content: center;
     position: relative;
+    flex: 1;
 }
 
-.c-left{
+.c-right>form
+{
     display: flex;
     flex-direction: column;
-}
-.contact-form .w-contact >h1{
-    font-size: 5rem;
-    color: var(--black);
-}
-
-.contact-form .w-contact >span{
-   color: var(--orange);
-   font-size: 5rem;
-   font-weight: bolder;
-   margin-bottom: 1rem;
-}
-
-.c-right form{
-    display: flex;
-    flex-direction: column;
+    gap: 2rem;
     align-items: center;
-    gap: 3rem;
+    
 }
 
-.c-right form input:nth-of-type(1){
-    width: 30rem;
-    height: 3rem;
-    border: 3px solid var(--orange);
-    border-radius: 10px;
-    padding: 2rem;
+.c-right .user{
+    width: 20rem;
+    height: 2rem;
+    padding: 0.3em;
     outline: none;
-}
-.c-right form input:nth-of-type(2){
-    width: 30rem;
-    height: 3rem;
-    border: 3px solid var(--orange);
-    border-radius: 10px;
-    padding: 2rem;
-    outline: none;
-}
-.c-right textarea{
-    width: 30rem;
-    height: 7rem;
-    border: 3px solid var(--orange);
-    border-radius: 10px;
-    padding: 2rem;
-    outline: none;
+    border: 2px solid var(--orange);
+    border-radius: 8px;
+    font-size: 16px;   
 }
 
- .c-left .c-blur1{
-    left: 0%;
-    top: 15%;
+textarea{
+    height: 4rem!important;
 }
- .c-right .c-blur2{
-    top: 20%;
-    left: 43%;
+
+.c-blur1{
+    top: 1rem;
+    left: 8rem;
 }
 
 
-@media screen and (max-width:480px){
-    .contact-form {
-        display: flex;
-        min-height: 70vh;
-        gap: 7rem;
-        position: relative;
+@media (min-width:375px) and (max-width:680px) {
+    .contact-form{
+        padding: 0;
         flex-direction: column;
+        gap: 5rem;
+        height: 40rem;
+        margin-top: -8rem;
+        text-align: center;
     }
-
-    .c-right form input:nth-of-type(1) {
-        width: 26rem;
-        height: 2rem;
-    }
-    .c-right form input:nth-of-type(2) {
-        width: 26rem;
-        height: 2rem;
-    }
-
-    .c-right textarea{
-        width: 26rem;
-        height: 7rem;
-        
+    .c-right .user{
+        width: 16rem;
     }
 }
 
