--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,17 +3,20 @@
     align-items: center;
     margin: -0.5rem -3.5rem;
     margin-top: -7rem;
+    position: relative;
 }
-.f-content{
+.f-content {
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
     margin-top: 9rem;
     gap: 4rem;
     color: white;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
 }
 .f-content span{
     font-size: 2rem;
@@ -25,17 +28,15 @@
 }
 
 
-@media screen and (max-width:480px){
+@media (min-width:375px) and (max-width:680px) {
     .footer {
-        display: flex;
-        align-items: center;
-        margin: -0.5rem -3.5rem;
         margin-top: -7rem;
         min-height: 49vh;
     }
 
     .f-content{
-        margin-left: 3rem;
+        left: 50%;
+         top: 30%;
     }
 
     .footer img{
