--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -1,110 +1,131 @@
-.intro{
+.Intro {
     display: flex;
-    justify-content:space-between ;
-    margin-top: 19vh;
-}
-.i-about{
+    min-height: 60vh;
+    margin-top: 15rem;
+  }
+  
+  /* left side styling */
+  .i-left {
+    display: flex;
+    position: relative;
+    flex: 1;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .i-name {
     display: flex;
     flex-direction: column;
-}
-.intro .i-about >h1{
-    font-size: 5rem;
+    gap: 0.25rem;
+  }
+  .i-name > :nth-child(1) {
     color: var(--black);
-}
-
-.intro .i-about >span{
-   color: var(--orange);
-   font-size: 5rem;
-   font-weight: bolder;
-   margin-bottom: 1rem;
-}
-.intro .i-about >p{
-    color: rgb(87, 87, 87);
-    font-size: 1.2rem;
-    font-weight: 600;
-    letter-spacing: 0.03rem;
-}
-
-.i-button{
-    width:25%;
-    margin: 2rem 0;
-}
-
-.i-icons{
+    font-weight: bold;
+    font-size: 5rem;
+  }
+  .i-name > :nth-child(2) {
+    color: var(--orange);
+    font-weight: bold;
+    font-size: 5rem;
+  }
+  .i-name > :nth-child(3) {
+    font-weight: 100;
+    font-size: 19px;
+    color: var(--gray);
+    margin-top: 10px;
+    line-height: 1.67em;
+  }
+  .i-button {
+    width: 9rem;
+    height: 3rem;
+  }
+  .i-icons {
+    margin-top: 3rem;
     display: flex;
-    gap: 1rem;
-    margin-top: 6rem;
-}
-.i-icons >a{
-    transform: scale(0.6);
+    gap: 0rem;
+  }
+  .i-icons > * {
+    transform: scale(0.5);
+  }
+  .i-icons > *:hover {
     cursor: pointer;
-}
-.i-icons >img{
-    transform: scale(0.6);
-    cursor: pointer;
-}
-
-.i-right{
+  }
+  /* right side styling */
+  .i-right {
+    flex: 1;
     position: relative;
-}
-.i-right #vector1{
+  }
+  .i-right > * {
     position: absolute;
-    left: -10%;
-    z-index: -1;
-    transform: scale(1);
-}
-.i-right #vector2{
-    transform: scale(1);
-}
-.i-right #me{
-    position: absolute;
-    left: 2%;
     z-index: 1;
-    transform: scale(1.6);
-    top: -11%;
-    clip-path: circle(77.1% at 46% 31%);
+  }
+  .i-right > :nth-child(1) {
+    transform: scale(0.69);
+    left: -15%;
+    top: -9%;
+  }
+  .i-right > :nth-child(2) {
+    top: -4.6rem;
+    transform: scale(0.67);
+    left: -3rem;
+  }
+  .i-right > :nth-child(3) {
+    transform: scale(1.4);
+    left: -3%;
+    top: -16%;
+    clip-path: polygon(50% 0%, 108% 0, 146% 36%, 98% 78%, 82% 87%, 49% 91%, 26% 80%, 0 80%, 5% 40%, 0 0);
 }
-
-.i-right img:nth-of-type(4){
-    position: absolute;
-    left: -33%;
-    top: -15%;
-    transform: scale(0.8);
-}
-
-/* styling of background blur effect */
-.blur{
-    position: absolute;
-    filter: blur(177px);
-    top: -17%;
-    width: 22rem;
-    height: 13rem;
-    background: #8d2fc8;
-    left: 55%;
+  .i-right > :nth-child(4) {
+    transform: scale(0.62);
+    top: -19%;
+    left: -24%;
     border-radius: 50%;
-    z-index: -1;
-}
-/* styling of background blur effect ends*/
+    padding: 0;
+  }
+  
+  /* blur */
+  .blur {
+    position: absolute;
+    width: 22rem;
+    height: 14rem;
+    border-radius: 50%;
+    background: #edd0ff;
+    filter: blur(212px);
+    z-index: -9;
+    top: -18%;
+    left: 56%;
+    filter: blur(72px);
+  }
+  
 
 
-@media screen and (max-width:480px){
-    .intro{
+@media (min-width:375px) and (max-width:680px) {
+    .Intro {
         flex-direction: column;
-        align-items: center;
-       
-    }
-    .i-right{
-        transform: scale(0.5);
-        margin-left: 5rem;
-    }
-    .i-right .blur{
+        gap: 7rem;
+        height: 64rem;
+        margin-top: 7rem;
+      }
+    
+      .i-right {
+        transform: scale(0.8);
+        left: -3rem;
+      }
+      .i-right .blur {
         display: none;
-    }
-    .floating-div:nth-of-type(1){
-        top: -10rem !important;
-    }
-    .i-button {
-        width: 45%;
-        margin: 2rem 0;
-    }
+      }
+      .floating-div:nth-of-type(1){
+        /* display: none; */
+        top: -7rem !important;;
+      }
+      .i-name > :nth-child(1) {
+        font-size: 3rem;
+      }
+      .i-name > :nth-child(2) {
+        font-size: 3rem;
+      }
+      .i-name > :nth-child(3) {
+        font-size: 16px;
+      }
 }
+
+
