--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,53 +1,63 @@
-.n-wrapper{
-    height:10vh;
+.n-wrapper {
+    height: 10vh;
     display: flex;
     justify-content: space-between;
-    z-index: 99;
+    margin-bottom: 2rem;
+    top: 0;
     position: relative;
-}
-
-.n-left{
-    display: flex;
+    z-index: 999;
+  }
+  .n-left {
+    flex: 1;
     align-items: center;
-    gap: 3rem;
-}
-
-.n-right{
+    justify-content: left;
     display: flex;
-    align-items: center;
-    font-weight: 400;
-    width: 60%;
-}
-
-.n-list ul{
-    display: flex;
-    gap: 3rem;
-    margin-right: 7rem;
-
-}
-
-.n-list li{
-    list-style: none;
-    font-size: 1.33rem;
-    margin-right: 2rem;
-    cursor: pointer;
-}
-.n-list >ul >li:hover{
-    cursor: pointer;
-    color: var(--orange);
-}
-
-.n-name{
-    font-size: 1.3rem;
+    gap: 2rem;
+  }
+  
+  .n-name {
+    font-size: 3rem;
     font-weight: bold;
+  }
+  .n-right {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-weight: 400;
+  }
+  
+  .n-list {
+    flex: 10;
+  }
+  .n-list > ul {
+    display: flex;
+    gap: 4rem;
+    margin-right: 4rem;
+  }
+  
+  .n-list > ul :hover {
+    color: var(--orange);
+    cursor: pointer;
+  }
+  .n-list li{
+    font-size: 1.2rem;
+  }
+  
+  .n-button {
+    flex: 2;
+  }
+
+
+/*media query for mobile design  */
+@media (min-width:375px) and (max-width:680px) {
+    .n-list {
+        display: none;
+      }
+      .n-button {
+        flex: 2 1;
+        display: none;
+    }
 }
 
-@media screen and (max-width:480px){
-    .n-list{
-        display: none;
-    }
-    .n-right button{
-        display: none;
-    }
-    
-}
+/* media query for tablet design */
