--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,52 +1,39 @@
-.portfolio{
+.portfolio {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    min-height: 80vh;
-}
-
-
-.portfolio span:nth-of-type(1){
+    height: 70vh;
+  
+  }
+  /* heading */
+  .portfolio span:nth-of-type(1) {
     color: var(--black);
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
-}
-
-.portfolio span:nth-of-type(2){
+  }
+  
+  .portfolio span:nth-of-type(2) {
     color: var(--orange);
-    font-size: 2.6rem;
+    font-size: 2.5rem;
     font-weight: bold;
-}
-
-
-/* Styling of slider */
-.portfolio .Swiper{
-    overflow: visible;
-
-}
-
-.portfolio-slider{
+  }
+  
+  /* slider */
+  .portfolio .swiper{
+      overflow: visible!important;
+  }
+  
+  .portfolio-slider {
     margin-top: 3rem;
     width: 100%;
-}
-
-.portfolio-slider .swiper-slide{
+  }
+  
+  .portfolio-slider .swiper-slide {
     width: 20rem;
-}
-
-.portfolio img{
-    width: 37rem;
+  }
+  .portfolio img {
+    width: 19rem;
     filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
-    border-radius: 20px;
-}
-/* Styling of slider ends*/
-
-
-@media screen and (max-width:480px){
-    .portfolio img {
-        width: 25rem;
-        filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
-        border-radius: 20px;
-    }
-}
+    border-radius: 19px;
+  }
