--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,72 +1,93 @@
-.services{
-    display: flex;
-    margin-top: 20vh;
-    min-height: 100vh;
+.services {
+  padding: 0 3rem 0 3rem;
+  display: flex;
+  min-height: 90vh;
+  margin-bottom: 8rem;
+  margin-top: 9rem;
+  margin-bottom: 13rem;
+  /* scroll view */
+  padding-top: 3rem;
+}
+/* left side */
+.awesome {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  /* gap: 20px; */
 }
 
-.s-left{ 
+.awesome > span:nth-child(1) {
+  color: var(--black);
+  font-size: 5rem;
+  font-weight: bold;
+}
+.awesome > span:nth-child(2) {
+  color: var(--orange);
+  font-size: 5rem;
+  font-weight: bold;
+}
+.awesome > span:nth-child(3) {
+  color: var(--gray);
+  font-size: 19px;
+  margin-top: 1rem;
+}
+.awesome .s-button {
+  width: 10rem;
+  height: 3rem;
+  margin-top: 4rem;
+}
+/* right sided */
+.cards {
+  position: relative;
+}
+.cards > * {
+  position: absolute;
+}
+
+/* blur */
+.s-blur2 {
+  left: 14rem;
+  top: 8rem;
+}
+
+.s-blur1 {
+  top: 13rem;
+  left: -18rem;
+}
+
+@media (min-width:375px) and (max-width:680px) {
+  .services {
+    margin-top: 22vh;
+    flex-direction: column;
+    gap: 5rem;
+    height: 66rem;
+    padding: 0;
+    width: 100%;
+  }
+
+
+  .cards {
     display: flex;
     flex-direction: column;
-}
-.s-left >h1{
-    font-size: 5rem;
+    gap: 23rem;
+  }
+  .cards > * {
+    position: static;
+  }
+  .awesome > span:nth-child(1) {
     color: var(--black);
-}
-
-.s-left >span{
-   color: var(--orange);
-   font-size: 5rem;
-   font-weight: bolder;
-   margin-bottom: 1rem;
-}
-.s-left >p{
-    color: rgb(87, 87, 87);
-    font-size: 1.2rem;
-    font-weight: 600;
-    letter-spacing: 0.03rem;
-}
-
-.s-button{
-    width:30%;
-    margin: 2rem 0;
-}
-
-.cards{
-    position: relative;
-}
-.cards>* {
-    position: absolute;
-}
-
-.s-blur1{
-    top: 10rem;
-    left: 30rem;
-}
-.s-blur2{
-    top: 31rem;
-}
-.s-blur3{
-    top: 50rem;
-    left: 35rem;
-}
-
-@media screen and (max-width:480px){
-    .services{
-        margin-top: 0;
-        flex-direction: column;
-        height: 225vh;
-    }
-    .cards{
-        display: flex;
-        flex-direction: column;
-        gap: 25rem;
-    }
-    .cards>*{
-        position: static;
-    }
-    .s-button {
-        width: 45%;
-        margin: 2rem 0;
-    }
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
+  .awesome > span:nth-child(1) {
+    color: var(--black);
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
+  .awesome > span:nth-child(1) {
+    color: var(--black);
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
 }
 
