--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -1,69 +1,71 @@
 .t-wrapper{
-    min-height: 90vh;
-    padding:0 3rem;
+    padding:  0 3rem 0 3rem;;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
+    flex-direction: column;
+    gap: 2rem;
     position: relative;
-    
+    text-align: center;
 }
-
+.t-heading{
+    align-items: center;
+}
 .t-heading>*{
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
 }
-
 .t-heading span:nth-of-type(2){
-color: var(--orange);
-padding: 0 1rem;
+    color: var(--orange);
 }
 
 .t-blur1{
-    top: 26rem;
+    left: 38rem;
+    top: 16rem;
 }
 .t-blur2{
-    top: 10rem;
-    left: 10%;
+    top: 9rem;
+    left: 0;
 }
-
 .testimonial{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     padding: 2rem;
-    width: 45rem;
-    height: 22rem;
-    margin-bottom: 6rem;
-
+    width: 35rem;
+    height: 21rem;
+    /* styles same as work.css */
     background: rgba(255, 255, 255, 0.26);
     border: 7px solid var(--blueCard);
     box-shadow: var(--boxShadow);
     border-radius: 20px;
 }
-
-.testimonial >img{
-    width: 8rem;
-    height: 8rem;
+.testimonial>img{
+    width: 6rem;
+    height: 6rem;
     border-radius: 100%;
 }
-
 .testimonial>span{
-    color: grey;
-    font-size: 1.2rem;
+    color: var(--gray);
 }
 
-.t-wrapper .swiper{
+.t-heading>span{
+    display: inline-block;
+}
+
+
+/* slider */
+.t-wrapper .swiper {
     width: 100%;
     height: 70%;
 }
 
 .t-wrapper .swiper-slide{
-display: flex;
-align-items: center;
-justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .t-wrapper .swiper-pagination-bullet-active{
@@ -71,10 +73,28 @@ justify-content: center;
 }
 
 
-
-@media screen and (max-width:480px){
+@media (min-width:375px) and (max-width:680px) {
     .t-wrapper{
         padding: 0;
+        margin-top: 0rem;
+        gap: 7rem;
+        text-align: center;
     }
-
+    .testimonial>img{
+        width: 70px;
+        height: 70px;
+    }
+    .testimonial span{
+        font-size: 0.8em;
+    }
+    .t-wrapper .swiper-slide{
+        align-items: initial;
+    }
+    .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+        bottom: 277px !important;
+        left: 0;
+        width: 100%;
+    }
+    
+    
 }
