--- a/src/Components/Works/Works.css
+++ b/src/Components/Works/Works.css
@@ -1,114 +1,147 @@
-.works{
-    min-height: 75vh;
+.works {
+  padding: 0 3rem 0 3rem;
+  display: flex;
+  height: 90vh;
+  margin-top: 4rem;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+}
+  /* left side */
+  .awesome {
     display: flex;
-}
-.works .s-left{
-    width: 50%;
-}
-
-/* right side */
-.w-right{
+    flex-direction: column;
     position: relative;
-    width: 50%;
-}
-
-.w-mainCircle{
-left: 9rem;
-position: relative;
-width: 28rem;
-height: 28rem;
-border-radius:100% ;
-box-shadow: var(--smboxShadow);
-background: white;
-top: 3rem;
-}
-
-.w-mainCircle>*{
-    position: absolute;
-}
-.w-mainCircle > :nth-of-type(1){
-    top: -4rem;
-    left: 10rem;
-}
-.w-mainCircle > :nth-of-type(2){
-    top: 11rem;
-    left: -4rem;
-}
-.w-mainCircle > :nth-of-type(3){
-    top: 10rem;
-    left: 10rem;
-}
-.w-mainCircle > :nth-of-type(4){
-    top: 9rem;
-    left: 24rem;
-}
-.w-mainCircle > :nth-of-type(5){
-    top: 24rem;
-    left: 11rem;
-}
-
-.w-secCircle{
+  }
+  
+  .awesome > :nth-child(1) {
+    color: var(--black);
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
+  .awesome > :nth-child(2) {
+    color: var(--orange);
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
+  .awesome > :nth-child(3) {
+    color: var(--gray);
+    font-size: 19px;
+    line-height: 1.67em;
+    margin-top: 1rem;
+  }
+  .s-button {
     width: 8rem;
-    height: 8rem;
+    height: 2rem;
+    margin-top: 4rem;
+  }
+  
+  /* right side */
+  .w-right {
+    position: relative;
+  }
+  
+  .w-mainCircle {
+    left: 9rem;
+    position: relative;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 100%;
+    box-shadow: var(--smboxShadow);
+    top: 2rem;
+    background: white;
+    /* darkMode */
+    z-index: 2;
+  }
+  .w-mainCircle > * {
+    position: absolute;
+  }
+  .w-mainCircle > :nth-child(1) {
+    top: -3rem;
+    left: 6rem;
+  }
+  .w-mainCircle > :nth-child(2) {
+    left: -3rem;
+    top: 5rem;
+  }
+  .w-mainCircle > :nth-child(3) {
+    left: 6rem;
+    top: 5rem;
+  }
+  .w-mainCircle > :nth-child(4) {
+    left: 15rem;
+    top: 5rem;
+  }
+  .w-mainCircle > :nth-child(5) {
+    left: 6rem;
+    top: 13rem;
+  }
+  .w-secCircle {
+    width: 6rem;
+    height: 6rem;
     position: absolute;
     border-radius: 100%;
     border: 5px solid #ebebeb;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: "none";
     box-shadow: var(--smboxShadow);
-    background-color: white;
-    padding: 4rem;
-}
-
-.w-secCircle>img{
-    transform: scale(0.8);
-}
-
-.w-backcircle{
+    background: white;
+  }
+  
+  .w-secCircle > img {
+    transform: scale(0.6);
+  }
+  
+  .w-backCircle {
     position: absolute;
-    height: 20rem;
-    width: 20rem;
-    border-radius:100% ;
-    z-index: -1;
-}
-
-.blueCircle{
-    background-color: blue;
-    top: -2rem;
-    left: 24rem;
-}
-.yellowCircle{
-background-color: yellow;
-top: 17rem;
-left: 24rem;
-}
-
-@media screen and (max-width:480px){
-    .works{
-        flex-direction: column;
-        align-items: center;
+    height: 13rem;
+    width: 13rem;
+    border-radius: 100%;
+    /* darkMode */
+    z-index: 1;
+  }
+  .blueCircle {
+    background: #1949b8;
+    left: 18rem;
+    top: 0rem;
+  }
+  .yellowCircle {
+    background: #f5c32c;
+    left: 18rem;
+    top: 8rem;
+  }
+  
+  @media (min-width:375px) and (max-width:680px){
+    .works {
+      flex-direction: column;
+      padding: 0;
+      gap: 5rem;
+      height: 43rem;
+      text-align: center;
     }
-    .works .s-left{
-        width: 100%;
-    }
-    .works .w-right{
-        width: 100%;
-    }
-
-    .works .s-left p{
-            font-size: 1rem;
-    font-weight: 500;
-    }
-
-    .w-right{
-        transform: scale(0.6);
-        
+  
+    .w-right {
+      display: flex;
+      align-items: flex-start;
+      justify-content:start;
+      transform: scale(0.7);
     }
     .w-mainCircle{
-        position: static;
+      position: static;
     }
-    .w-backcircle{
-        left: 16rem;
+    .w-backCircle{
+      left: 8rem!important;
     }
-}
+    .awesome > span:nth-child(1) {
+      font-size: 1.5rem;
+    }
+    .awesome > span:nth-child(2) {
+      font-size: 1.5rem;
+    }
+    .awesome > span:nth-child(3) {
+      font-size: 1.5rem;
+    }
+  
+  }
