--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -9,13 +9,13 @@
   /* heading */
   .portfolio span:nth-of-type(1) {
     color: var(--black);
-    font-size: 2rem;
+    font-size: 4rem;
     font-weight: bold;
   }
   
   .portfolio span:nth-of-type(2) {
     color: var(--orange);
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: bold;
   }
   
@@ -33,7 +33,22 @@
     width: 20rem;
   }
   .portfolio img {
-    width: 19rem;
+    width: 25rem;
     filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
     border-radius: 19px;
   }
+/* for moblie  */
+  @media (min-width:375px) and (max-width:680px){
+    .portfolio span:nth-of-type(1) {
+      font-size: 2rem;
+    }
+  }
+
+
+
+   /* for tablet  */
+   @media (min-width:681px) and (max-width:1181px){
+    .portfolio span:nth-of-type(1) {
+      font-size: 2rem;
+    }
+   }
