--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  /* gap: 20px; */
+  align-items: center;
 }
 
 .awesome > span:nth-child(1) {
@@ -32,8 +32,8 @@
   margin-top: 1rem;
 }
 .awesome .s-button {
-  width: 10rem;
-  height: 3rem;
+  width: 13rem;
+  height: 4rem;
   margin-top: 4rem;
 }
 /* right sided */
@@ -54,40 +54,90 @@
   top: 13rem;
   left: -18rem;
 }
-
+/* mobile design */
 @media (min-width:375px) and (max-width:680px) {
   .services {
-    margin-top: 22vh;
+    margin-top: 36vh;
     flex-direction: column;
     gap: 5rem;
     height: 66rem;
     padding: 0;
+    text-align: center;
     width: 100%;
+    
+}
+br{
+  display: none;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 23rem;
+}
+.cards > * {
+  position: static;
+}
+.services .awesome > span:nth-child(1) {
+  color: var(--black);
+  font-size:3rem;
+  font-weight: bold;
+}
+.services .awesome > span:nth-child(2) {
+  color: var(--orange);
+  font-size: 3rem;
+  font-weight: bold;
+}
+.services .awesome > span:nth-child(3) {
+  color: grey;
+  font-size: 16px;
+}
+
   }
-
-
+  /* tablet design  */
+  @media (min-width:681px) and (max-width:1181px) {
+    .services {
+      margin-top: -27vh;
+      flex-direction: column;
+      gap: 5rem;
+      height: 66rem;
+      padding: 0;
+      width: 100%;
+      
+  }
+  br{
+    display: none;
+  }
   .cards {
     display: flex;
+    gap: 25rem;
     flex-direction: column;
-    gap: 23rem;
+    margin-left: 10rem;
   }
   .cards > * {
     position: static;
   }
-  .awesome > span:nth-child(1) {
+  .cards .card{
+    width: 80%;
+  }
+  .services .awesome > span:nth-child(1) {
     color: var(--black);
-    font-size: 2.5rem;
+    font-size:3rem;
     font-weight: bold;
   }
-  .awesome > span:nth-child(1) {
-    color: var(--black);
-    font-size: 2.5rem;
+  .services .awesome > span:nth-child(2) {
+    color: var(--orange);
+    font-size: 3rem;
     font-weight: bold;
   }
-  .awesome > span:nth-child(1) {
-    color: var(--black);
-    font-size: 2.5rem;
-    font-weight: bold;
+  .services .awesome > span:nth-child(3) {
+    color: grey;
+    font-size: 16px;
   }
-}
+  .services .awesome{
+    align-items: flex-start;
+  }
+  }
+
+
+ 
 
