--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,5 +1,5 @@
 .services {
-  padding: 0 3rem 0 3rem;
+  padding: 0 3rem 0 0rem;
   display: flex;
   min-height: 90vh;
   margin-bottom: 8rem;
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .awesome > span:nth-child(1) {
@@ -51,8 +51,8 @@
 }
 
 .s-blur1 {
-  top: 13rem;
-  left: -18rem;
+  top: 5rem;
+    left: -3rem;
 }
 /* mobile design */
 @media (min-width:375px) and (max-width:680px) {
@@ -65,6 +65,9 @@
     text-align: center;
     width: 100%;
     
+}
+.services .awesome{
+  align-items: center;
 }
 br{
   display: none;
@@ -134,7 +137,7 @@ br{
     font-size: 16px;
   }
   .services .awesome{
-    align-items: flex-start;
+    align-items: center;
   }
   }
 
