--- a/src/Components/Mobilenav/Mobilenav.css
+++ b/src/Components/Mobilenav/Mobilenav.css
@@ -21,6 +21,7 @@ header {
 }
 header h3{
 	font-size: 3rem;
+	letter-spacing: 0.1em;
 }
 
 nav a {
@@ -92,7 +93,6 @@ nav {
 	header .nav-btn {
 		visibility: visible;
 		opacity: 1;
-
 	}
 
 	header nav {
@@ -105,7 +105,7 @@ nav {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		gap: 4rem;
+		gap: 5rem;
 		background-color: var(--orange);
 		transition: 1s;
 		transform: translateY(-100vh);
@@ -122,6 +122,6 @@ nav {
 	}
 
 	nav a {
-		font-size: 1.5rem;
+		font-size: 2.3rem;
 	}
 }
