--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -2,6 +2,7 @@
     display: flex;
     min-height: 60vh;
     margin-top: 15rem;
+    align-items: center;
   }
   
   /* left side styling */
@@ -44,44 +45,22 @@
     gap: 0rem;
   }
   .i-icons > * {
-    transform: scale(0.5);
+    transform: scale(0.6);
   }
   .i-icons > *:hover {
     cursor: pointer;
   }
   /* right side styling */
-  .i-right {
+  .i-right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex: 1;
-    position: relative;
   }
-  .i-right > * {
-    position: absolute;
-    z-index: 1;
+  .i-right img{
+    width: 100%;
   }
-  .i-right > :nth-child(1) {
-    transform: scale(0.69);
-    left: -15%;
-    top: -9%;
-  }
-  .i-right > :nth-child(2) {
-    top: -4.6rem;
-    transform: scale(0.67);
-    left: -3rem;
-  }
-  .i-right > :nth-child(3) {
-    transform: scale(1.4);
-    left: -3%;
-    top: -16%;
-    clip-path: polygon(50% 0%, 108% 0, 146% 36%, 98% 78%, 82% 87%, 49% 91%, 26% 80%, 0 80%, 5% 40%, 0 0);
-}
-  .i-right > :nth-child(4) {
-    transform: scale(0.62);
-    top: -19%;
-    left: -24%;
-    border-radius: 50%;
-    padding: 0;
-  }
-  
+ 
   /* blur */
   .blur {
     position: absolute;
@@ -105,17 +84,8 @@
         height: 64rem;
         margin-top: 7rem;
       }
-    
-      .i-right {
-        transform: scale(0.8);
-        left: -4rem;
-      }
       .i-right .blur {
         display: none;
-      }
-      .floating-div:nth-of-type(1){
-        /* display: none; */
-        top: -7rem !important;;
       }
       .i-name > :nth-child(1) {
         font-size: 3rem;
@@ -126,6 +96,7 @@
       .i-name > :nth-child(3) {
         font-size: 16px;
       }
+     
 }
 
 /* for tablets */
@@ -137,16 +108,8 @@
     margin-top: 7rem;
   }
 
-  .i-right {
-    transform: scale(0.8);
-    left: -9rem;
-  }
   .i-right .blur {
     display: none;
-  }
-  .floating-div:nth-of-type(1){
-    /* display: none; */
-    top: -15rem !important;;
   }
   .i-name > :nth-child(1) {
     font-size: 3rem;
@@ -157,5 +120,6 @@
   .i-name > :nth-child(3) {
     font-size: 16px;
   }
+ 
 }
 
